libs/preprocessor/tests/errors/pe12_include_not_found/source.hpp
// a comment about nothing, just to check if it is ignored and counted correctly
#include <something.hpp>
